Change the title to Bold

--- a/src/app/components/employee-form/employee-form.component.html
+++ b/src/app/components/employee-form/employee-form.component.html
@@ -1,4 +1,4 @@
-<h2>Employee Details Form</h2>
+<h2><b>Employee Details Form</b></h2>
 <div style="display:flex;float:left;width:50%;">
     <form [formGroup]="employeeDetails" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline" class="form-field-single">
